--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+FeelingAnalysisApp/Sources/AppSupport/APIKeys.swift
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
