--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-FeelingAnalysisApp/Sources/AppSupport/APIKeys.swift
+### Api Keys ###
+Projects/MainApp/**/APIKeys.swift
 
 ### macOS ###
 # General
